Add NoxSpot resolution notifications
